# zerobrew

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.MD  install.sh
.github/workflows/: release.yml
docs/: benchmarking.md
justfiles/: benchmark.just  build.just  default.just  install.just  lint.just  test.just
zb_bench/: Cargo.toml
zb_bench/benches/: workspace_hotspots.rs
zb_bench/src/: main.rs
zb_cli/: Cargo.toml
zb_cli/src/: cli.rs  init.rs  logging.rs  ui.rs  utils.rs
zb_cli/src/commands/: bundle.rs  casks.rs  command_list.rs  config.rs  deps.rs  doctor.rs  edit.rs  formulae.rs  gc.rs  home.rs  info.rs  init.rs  install.rs  leaves.rs  link.rs  list.rs  migrate.rs  missing.rs  mod.rs  options.rs  outdated.rs  pin.rs  prefix.rs  reinstall.rs  reset.rs  run.rs  search.rs  shellenv.rs  source.rs  uninstall.rs  unlink.rs  update.rs  upgrade.rs  uses.rs
zb_cli/tests/: integration.rs
zb_core/fixtures/: formula_foo.json
zb_core/src/: errors.rs  lib.rs
zb_core/src/formula/: bottle.rs  mod.rs  resolve.rs  types.rs
zb_io/src/: checksum.rs  fs_copy.rs  lib.rs
zb_io/src/cellar/: link.rs  materialize.rs
zb_io/src/extraction/: extract.rs
zb_io/src/extraction/patch/: macos.rs
zb_io/src/installer/: cask.rs  homebrew.rs  mod.rs
zb_io/src/installer/install/: bottle.rs  doctor.rs  mod.rs  plan.rs  source.rs  uninstall.rs
zb_io/src/network/: api.rs  mod.rs  tap_cask.rs  tap_formula.rs
zb_io/src/network/download/: auth.rs  chunked.rs  (+2 more)
zb_io/src/storage/: blob.rs  db.rs  store.rs
