[package]
name = "zb_bench"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
criterion-table = "0.4.2"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
zb_cli = { path = "../zb_cli" }
zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }

[[bench]]
name = "workspace_hotspots"
harness = false
